# MCCE_Benchmarking

./: .gitignore  Benchmarking_Outline_MG.md  Benchmarking_Project.md  CHANGELOG  CHANGELOG.md  Install_and_Test.txt  Installation.md  MANIFEST.in  README.md  Tutorial.md  pyproject.toml
.github/workflows/: python-publish.yml
benchmark/: __init__.py  _version.py  audit.py  batch_submit.py  cleanup.py  cli.py  job_setup.py  pkanalysis.py  plot.py
benchmark/data/: proteins.tsv
benchmark/data/clean_pdbs/: book.txt  default_run.sh  run.sh
benchmark/data/clean_pdbs/1BEG/: 1beg.pdb.full
benchmark/data/clean_pdbs/1FW7/: 1fw7.pdb.full
legacy/: README.md  batch_submit.py  convert_csv.py  new.sh  pkanalysis.py  plot.py  proteins.txt  readme.txt
mcce_benchmark/: __init__.py  _version.py  audit.py  batch_submit.py  cleanup.py  cli.py  comparison.py  custom_sh.py  diff_mc.py  interactive.py  io_utils.py  job_setup.py  mcce_env.py  pkanalysis.py  plot.py  plots.py  scheduling.py
mcce_benchmark/data/: MT_pkas.csv
mcce_benchmark/data/clean_pdbs/1JAS/: 1jas.pdb.full
mcce_benchmark/data/pkadbv1/: metadata.md
mcce_benchmark/data/pkadbv1/clean_pdbs/2IGH/: 2igh.pdb.full
mcce_benchmark/data/pkadbv1/refsets/parse.e4/: all_pkas.out
mcce_benchmark/data/pkadbv1/refsets/parse.e4/RUNS/: book.txt
mcce_benchmark/data/pkadbv1/refsets/parse.e4/analysis/: all_pkas.out  all_pkas.tsv  all_pkas_oob.tsv  all_sumcrg.out  conf_counts.tsv  confs_per_res.tsv  confs_throughput.tsv  job_pkas.pickle  matched_pkas.csv  matched_pkas_stats.pickle  outlier_residues.tsv  res_counts.tsv  run_times.tsv  versions.txt
mcce_benchmark/data/refsets/parse.e4/analysis/: conf_counts.tsv  run_times.tsv
mcce_benchmark/data/refsets/parse.e4/clean_pdbs/: default_run.sh
mcce_benchmark/data/refsets/parse.e4/clean_pdbs/1A2P/: run.prm.record
mcce_benchmark/data/refsets/parse.e4/clean_pdbs/1A6K/: run.prm.record
mcce_benchmark/data/refsets/parse.e4/clean_pdbs/1A6M/: run.prm.record
mcce_benchmark/data/refsets/parse.e4/clean_pdbs/1ANS/: run.prm.record
mcce_benchmark/data/refsets/parse.e4/clean_pdbs/1B2V/: run.prm.record
mcce_benchmark/data/refsets/parse.e4/clean_pdbs/1BEG/: run.prm.record
mcce_benchmark/data/refsets/parse.e4/clean_pdbs/1BNR/: run.prm.record
mcce_benchmark/data/refsets/parse.e4/clean_pdbs/1BVI/: run.prm.record
mcce_benchmark/data/refsets/parse.e4/clean_pdbs/1CVO/: run.prm.record
mcce_benchmark/data/refsets/parse.e4/clean_pdbs/1DG9/: run.prm.record
mcce_benchmark/data/refsets/parse.e4/clean_pdbs/1DIV/: run.prm.record
mcce_benchmark/data/refsets/parse.e4/clean_pdbs/1DSB/: run.prm.record
mcce_benchmark/data/refsets/parse.e4/clean_pdbs/1DUK/: run.prm.record
mcce_benchmark/data/refsets/parse.e4/clean_pdbs/1DWR/: run.prm.record
mcce_benchmark/data/refsets/parse.e4/clean_pdbs/1EH6/: run.prm.record
mcce_benchmark/data/refsets/parse.e4/clean_pdbs/1EPH/: run.prm.record
mcce_benchmark/data/refsets/parse.e4/clean_pdbs/1ERT/: run.prm.record
mcce_benchmark/data/refsets/parse.e4/clean_pdbs/1ERU/: run.prm.record
mcce_benchmark/data/refsets/parse.e4/clean_pdbs/1EX3/: run.prm.record
mcce_benchmark/data/refsets/parse.e4/clean_pdbs/1EY0/: run.prm.record
mcce_benchmark/data/refsets/parse.e4/clean_pdbs/1FNA/: run.prm.record
mcce_benchmark/data/refsets/parse.e4/clean_pdbs/1HHO/: run.prm.record
mcce_benchmark/data/refsets/parse.e4/clean_pdbs/1HIC/: run.prm.record
mcce_benchmark/data/refsets/parse.e4/clean_pdbs/1HRC/: run.prm.record
mcce_benchmark/data/refsets/parse.e4/clean_pdbs/1HV0/: run.prm.record
mcce_benchmark/data/refsets/parse.e4/clean_pdbs/1HV1/: run.prm.record
mcce_benchmark/data/refsets/parse.e4/clean_pdbs/1IG5/: run.prm.record
mcce_benchmark/data/refsets/parse.e4/clean_pdbs/1IGC/: run.prm.record
mcce_benchmark/data/refsets/parse.e4/clean_pdbs/1JAS/: run.prm.record
mcce_benchmark/data/refsets/parse.e4/clean_pdbs/1JBB/: run.prm.record
mcce_benchmark/data/refsets/parse.e4/clean_pdbs/1KF3/: run.prm.record
mcce_benchmark/data/refsets/parse.e4/clean_pdbs/1KXI/: run.prm.record
mcce_benchmark/data/refsets/parse.e4/clean_pdbs/1L54/: run.prm.record
mcce_benchmark/data/refsets/parse.e4/clean_pdbs/1LNI/: run.prm.record
mcce_benchmark/data/refsets/parse.e4/clean_pdbs/1LSE/: run.prm.record
mcce_benchmark/data/refsets/parse.e4/clean_pdbs/1MBC/: run.prm.record
mcce_benchmark/future/:  _tmp_previous_logging_implementation.txt  __init__.py.bkp  cli_future.py  sh_from_template.py
mcce_benchmark/tests/: _deprecated_test_scheduling.py  testapp.py
mcce_benchmark/tests/data/comp_expl_pkas_dir/: WT_pkas.csv  default_run.sh
mcce_benchmark/tests/data/comp_expl_pkas_dir/clean_pdbs/: book.txt
notebooks/: _refset_prep.ipynb  analysis.ipynb  audit.ipynb  env_tests.ipynb  flowcharts.ipynb  interactive.ipynb  mcc_cli_params.txt  pkout_df.ipynb  prep.ipynb  report.ipynb
(+1886 files in other folders)
