# pyproject.toml

[build-system]
requires = [
    "setuptools>=60",
]
build-backend = "setuptools.build_meta"

[project]
version = "0.1.0b1"
name = "mcce_bench"
description = "MCCE benchmarking against Dr. Emil Axelov's pKa Database v1 (http://compbio.clemson.edu/lab/software/5/)"
readme = "README.md"
authors = [
    {name = "Cat Chenal @ GunnerLab"},
    {name = "Junjun Mao @ GunnerLab"},
]
maintainers = [
    {name = "Cat Chenal @ GunnerLab"},
]
license = {file = "LICENSE"}
keywords = [
    "biophysics",
    "proteomics",
    "cheminformatics",
    "drug design",
    "Monte Carlo simulation",
    "pKa benchmark"
]
classifiers = [
    "Development Status :: 4 - Betaa",
    "Intended Audience :: Biophysicists, Developpers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

requires-python = ">=3.10"
dependencies = [
    "matplotlib",
    "numpy",
    "pandas",
    "pytest",
    "seaborn",
]

[project.urls]
Source = "https://github.com/GunnerLab/MCCE_Benchmarking"

[tool.setuptools.packages.find]
where = ["benchmark"]

#[tool.setuptools.packages]
#find = {}

[tool.setuptools.package-data]
"benchmark.data" = ["*.txt","*.tsv", "*.csv", "*.pdb"]

[project.scripts]
mccebench = "mcce_bench.cli:bench_cli"
#mypkg.mymodule:some_func"

