# pyproject.toml

[build-system]
requires = ["setuptools>=64", "wheel", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "mcce_benchmark"
dynamic = ["version"]
description = "MCCE benchmarking against Dr. Emil Axelov's pKa Database v1 (http://compbio.clemson.edu/lab/software/5/)"
readme = "README.md"
authors = [
    {name = "Cat Chenal @ GunnerLab"},
    {name = "Junjun Mao @ GunnerLab"},
]
maintainers = [
    {name = "Cat Chenal @ GunnerLab"},
]
license = {file = "LICENSE"}
keywords = [
    "biophysics",
    "proteomics",
    "cheminformatics",
    "drug design",
    "Monte Carlo simulation",
    "pKa benchmark"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Biophysicists, Developpers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
 ]

requires-python = ">=3.10"
dependencies = [
    "numpy",
    "scipy",
    "pandas",
    "ipykernel",
    "matplotlib",
    "seaborn",
    "pytest",
]

[project.urls]
Source = "https://github.com/GunnerLab/MCCE_Benchmarking"

[tool.setuptools.packages]
find = {}

[tool.setuptools.package-data]
"mcce_benchmark.data" = ["*.txt", "*.tsv", "*.csv", "*.pdb", "*.sh"]

[project.scripts]
bench_setup = "mcce_benchmark.cli:bench_cli"
# bench_batch used in crontab, submits 1 batch of size n_batch:
bench_batch = "mcce_benchmark.batch_submit:launch_cli"
bench_analyze = "mcce_benchmark.pkanalysis:analyze_cli"
bench_compare = "mcce_benchmark.comparison:compare_cli"

[tool.setuptools_scm]
version_file = "mcce_benchmark/_version.py"
